# Raycaster

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_windows.ps1  main.cpp  map.h  player.h  raycaster.h
include/: gl_core.h  map.h  player.h  raycaster.h  renderer_gl.h
shaders/: raycaster.frag  raycaster.vert
src/: gl_core.cpp  main.cpp  map.cpp  raycaster.cpp  renderer_gl.cpp
